[package]
name = "redis-sv"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Souza Ferro"]

[dependencies]
#bytes = "1.3.0"                                     # helps manage buffers
nix = "0.26.2"
#anyhow = "1.0.59"                                   # error handling
#thiserror = "1.0.32"                                # error handling
#tokio = { version = "1.23.0", features = ["full"] } # async networking
